fix spacing between accordians

--- a/app/src/assets/stylesheets/styles.scss
+++ b/app/src/assets/stylesheets/styles.scss
@@ -31,5 +31,5 @@ h4.usa-step-indicator__heading {
 
 .proofing .usa-accordion__heading:not(:first-child),
 .usa-prose .usa-accordion__heading:not(:first-child) {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
